--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- start navigation grid -->
       <div class="col w-1of3">
         <div class="content">
-          <a href="Homepage.html">HOME</a>
+          <a href="Homepage.html">HOMElol</a>
         </div>
       </div>
 
